updated korea platform

--- a/organisms/lp-terms-CH-KO.html
+++ b/organisms/lp-terms-CH-KO.html
@@ -22,7 +22,7 @@
                 <h3 class="wu-title">条款和条件 – Western Union新年促销活动 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
-                    <div class="wu-lpterms__termitem"><span>1. </span><p>有关如何参加和奖品的信息构成本条款和条件的一部分。通过在线注册，参与者同意本条款和条件。</p>
+                    <div class="wu-lpterms__termitem"><span>1. </span><p>有关如何参加和奖品的信息构成本条款和条件的一部分。通过<span style="text-decoration: underline;">在线注册</span>，参与者同意本条款和条件。</p>
                     </div>
                     <!-- 2 -->
                     <div class="wu-lpterms__termitem"><span>2. </span><p>次促销活动的推广方为Stratagile Pte Ltd（“推广方”），地址为Stratagile PTE LTD, 22 New Industrial Ro a d, PRIMAX #07-20/21 Singapore 536208。Stratagile Pte Ltd 代表 Western Union 管理本次促销活动 西联汇款不对促销活动的任何方面负责。该计划完全由促销方管理。</p>
@@ -61,7 +61,7 @@
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>为了获得参与资格，符合条件的参与者应登录活动页面并提供以下信息，以便在2025 年3 月18日之前注册参加促销活动。</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>为了获得参与资格，符合条件的参与者应登录<span style="text-decoration: underline;">活动页面</span>并提供以下信息，以便在2025 年3 月18日之前注册参加促销活动。</p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
