--- a/organisms/lp-terms-VN_KO.html
+++ b/organisms/lp-terms-VN_KO.html
@@ -22,7 +22,7 @@
                 <h3 class="wu-title">ĐIỀU KHOẢN VÀ ĐIỀU KIỆN –CHIẾN DỊCH KHÁCH HÀNG THÂN THIẾT 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
-                    <div class="wu-lpterms__termitem"><span>1. </span><p>Thông tin về cách tham gia và giải thưởng là một phần của các Điều khoản và Điều kiện này. Bằng cách đăng ký trực tuyến, người tham gia đồng ý với các Điều khoản và Điều kiện này.</p>
+                    <div class="wu-lpterms__termitem"><span>1. </span><p>Thông tin về cách tham gia và giải thưởng là một phần của các Điều khoản và Điều kiện này. Bằng cách đăng ký <span style="text-decoration: underline;">trực tuyến</span>, người tham gia đồng ý với các Điều khoản và Điều kiện này.</p>
                     </div>
                     <!-- 2 -->
                     <div class="wu-lpterms__termitem"><span>2. </span><p>Nhà quảng bá của Chương trình khuyến mãi này là Stratagile Pte Ltd ("Nhà quảng cáo") có địa chỉ Stratagile PTE LTD, 22 New Industrial Road, PRIMAX #07-20/21 Singapore 536208. Stratagile Pte Ltd đang quản lý chương trình khuyến mãi này thay mặt cho Western Union và Western Union không chịu trách nhiệm về bất kỳ khía cạnh nào của chương trình khuyến mãi. Chương trình được quản lý hoàn toàn bởi Ban tổ chức.</p>
@@ -32,7 +32,7 @@
                     <!-- 4 -->
                     <div class="wu-lpterms__termitem"><span>4. </span><p>Chương trình khuyến mãi này bắt đầu lúc 12:00 sáng (giờ Seoul) ngày 18 tháng 12 năm 2024 và kết thúc vào 11:59 tối (giờ Seoul) ngày 18 tháng 3 năm 2025 ("Thời gian khuyến mãi"). và có thể được Ban tổ chức gia hạn. Tất cả các giao dịch được thực hiện sau 11:59 tối (giờ Seoul) ngày 18 tháng 3 năm 2025 sẽ không được chấp nhận và sẽ được coi là không hợp lệ.</p></div>
                     <!-- 5 -->
-                    <div class="wu-lpterms__termitem"><span>5. </span><p>Cách tham gia: Đăng ký trực tuyến  và chọn giải thưởng mong muốn (chỉ chọn một loại). Gửi thành công Chuyển tiền Western Union® với số tiền tối thiểu 300 USD từ bất kỳ đại lý/đối tác nào của Western Union tại các địa điểm bán lẻ hoặc kênh trực tuyến tại Hàn Quốc đến Philippines, Việt Nam và Trung Quốc trong Thời gian diễn ra chương trình.</p></div>
+                    <div class="wu-lpterms__termitem"><span>5. </span><p>Cách tham gia: Đăng ký <span style="text-decoration: underline;">trực tuyến</span>  và chọn giải thưởng mong muốn (chỉ chọn một loại). Gửi thành công Chuyển tiền Western Union® với số tiền tối thiểu 300 USD từ bất kỳ đại lý/đối tác nào của Western Union tại các địa điểm bán lẻ hoặc kênh trực tuyến tại Hàn Quốc đến Philippines, Việt Nam và Trung Quốc trong Thời gian diễn ra chương trình.</p></div>
                     <!-- 6 -->
                     <div class="wu-lpterms__termitem"><span>6. </span><p>Giải thưởng: </p></div>
                     <!-- list a  -->
@@ -61,7 +61,7 @@
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>Để yêu cầu tham gia, Người tham gia đủ điều kiện phải đăng nhập vào trang chiến dịch và cung cấp các thông tin sau để đăng ký tham gia chương trình khuyến mãi cho đến ngày 18 tháng 3 năm 2025.</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>Để yêu cầu tham gia, Người tham gia đủ điều kiện phải đăng nhập vào <span style="text-decoration: underline;">trang chiến dịch</span> và cung cấp các thông tin sau để đăng ký tham gia chương trình khuyến mãi cho đến ngày 18 tháng 3 năm 2025.</p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
