--- a/organisms/lp-terms-EN_KO.html
+++ b/organisms/lp-terms-EN_KO.html
@@ -22,7 +22,7 @@
                 <h3 class="wu-title">TERMS AND CONDITIONS – LOYALTY CAMPAIGN 2024</h3>
                 <div class="wu-lpterms__terms">
                     <!-- 1 -->
-                    <div class="wu-lpterms__termitem"><span>1. </span><p>Information on how to enter and the prizes form part of these Terms and Conditions. By registering online, participants agree to these Terms and Conditions.</p>
+                    <div class="wu-lpterms__termitem"><span>1. </span><p>Information on how to enter and the prizes form part of these Terms and Conditions. By registering <span style="text-decoration: underline;">online</span>, participants agree to these Terms and Conditions.</p>
                     </div>
                     <!-- 2 -->
                     <div class="wu-lpterms__termitem"><span>2. </span><p>The Promoter of this Promotion is Stratagile Pte Ltd (“Promoter”) of address Stratagile PTE LTD, 22 New Industrial Road, PRIMAX #07-20/21 Singapore 536208. Stratagile Pte Ltd is managing this promotion on behalf of Western Union and Western Union is not liable for any aspect of the promotion. The program is fully managed by the Promoter.</p>
@@ -32,7 +32,7 @@
                     <!-- 4 -->
                     <div class="wu-lpterms__termitem"><span>4. </span><p>This Promotion commences at 12:00am (Seoul time) on 18th Dec 2024 and ends on 11:59pm (Seoul time) on 18th March 2025 (“Promotion Period”). and is subject to extension by the Promoter. All transactions made after 11:59pm (Seoul time) on 18th March 2025 will not be accepted and will be considered invalid.</p></div>
                     <!-- 5 -->
-                    <div class="wu-lpterms__termitem"><span>5. </span><p>How to enter: Register online  and choose desired prize (select one type only). Successfully send Western Union® Money Transfer in the amount of at least USD 300 from any of Western Union agents/partners at retail locations or online channels in Korea to the Philippines, Vietnam and China during the Promotion Period.</p></div>
+                    <div class="wu-lpterms__termitem"><span>5. </span><p>How to enter: Register <span style="text-decoration: underline;">online</span>  and choose desired prize (select one type only). Successfully send Western Union® Money Transfer in the amount of at least USD 300 from any of Western Union agents/partners at retail locations or online channels in Korea to the Philippines, Vietnam and China during the Promotion Period.</p></div>
                     <!-- 6 -->
                     <div class="wu-lpterms__termitem"><span>6. </span><p>Prizes: </p></div>
                     <!-- list a  -->
@@ -61,7 +61,7 @@
                         </ul>
                      </div>
                      <!-- 7 -->
-                     <div class="wu-lpterms__termitem"><span>7. </span><p>In order to claim their entry, an Eligible Participant should log in campaign page and provide the following information to register to the promotion until 18th March 2025.</p></div>
+                     <div class="wu-lpterms__termitem"><span>7. </span><p>In order to claim their entry, an Eligible Participant should log in <span style="text-decoration: underline;">campaign page</span> and provide the following information to register to the promotion until 18th March 2025.</p></div>
                      <!-- list -->
                      <div class="wu-lpterms__termlistb">
                         <ul>
